--- a/coconut-crab-co/assets/css/styles.scss
+++ b/coconut-crab-co/assets/css/styles.scss
@@ -1,16 +1,8 @@
-// @font-face {
-//   font-family: 'NamePop';
-//   src: url('../font/Honyaji-Re.ttf') format("truetype");
-// }
 @font-face {
   font-family: 'NamePop';
-  src: url('../font/RiiTN_R.otf') format("opentype");
+  src: url('../font/Honyaji-Re.ttf') format("truetype");
 }
 // @font-face {
 //   font-family: 'NamePop';
-//   src: url('../font/rounded-mgenplus-1p-medium.ttf') format("truetype");
-// }
-// @font-face {
-//   font-family: 'NamePop';
-//   src: url('../font/yomogifont.otf') format("opentype");
+//   src: url('../font/RiiTN_R.otf') format("opentype");
 // }
